working on avoiding horizontal scroll

--- a/styles/sass/partials/blog/_blogHeader.scss
+++ b/styles/sass/partials/blog/_blogHeader.scss
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-position-x: -70px;
     background-size: cover;
+    overflow-x: clip;
 }
 
 .headerFlexBlog {
