--- a/styles/sass/partials/blog/_blogPost.scss
+++ b/styles/sass/partials/blog/_blogPost.scss
@@ -14,6 +14,7 @@
         color: variables.$white;
         box-shadow: 7px 6px 0 6px variables.$turqoiseBlue;
         padding: 420px 70px 80px 140px;
+        overflow-x: clip;
         p {
             margin-bottom: 40px;
         }
