--- a/styles/sass/partials/contact/_contactHeader.scss
+++ b/styles/sass/partials/contact/_contactHeader.scss
@@ -7,6 +7,7 @@
     background-size: cover;
     background-position-x: right;
     height: 570px;
+    overflow-x: clip;
 }
 
 //HEADING CONTAINER CONTACT
